<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bright"
    android:orientation="vertical">

    <include layout="@layout/toolbar_search" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/bt_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/reload"
        android:visibility="gone"
        />


    <RelativeLayout
        android:id="@+id/caption_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/toolbar_caption_height"
        android:maxHeight="@dimen/toolbar_caption_height"
        android:background="@color/btn_orangeT"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/caption_tv_name"
            style="@style/Caption.Header.Small"
            android:minWidth="70dp"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/name" />

        <TextView
            android:id="@+id/caption_tv_abv"
            style="@style/Caption.Header.Small"
            android:layout_marginLeft="@dimen/margin_five"
            android:layout_marginStart="@dimen/margin_five"
            android:layout_toEndOf="@+id/caption_tv_name"
            android:layout_toRightOf="@+id/caption_tv_name"
            android:minWidth="70dp"
            android:text="@string/abv" />

        <TextView
            android:id="@+id/caption_tv_ibu"
            style="@style/Caption.Header.Small"
            android:layout_marginLeft="@dimen/margin_five"
            android:layout_marginStart="@dimen/margin_five"
            android:layout_toEndOf="@+id/caption_tv_abv"
            android:layout_toRightOf="@+id/caption_tv_abv"
            android:minWidth="70dp"
            android:visibility="visible"
            android:text="@string/ibu" />

        <TextView
            android:id="@+id/caption_tv_ebc"
            style="@style/Caption.Header.Small"
            android:layout_marginLeft="@dimen/margin_five"
            android:layout_marginStart="@dimen/margin_five"
            android:layout_toEndOf="@+id/caption_tv_ibu"
            android:layout_toRightOf="@+id/caption_tv_ibu"
            android:minWidth="70dp"
            android:text="@string/ebc" />

        <TextView
            android:id="@+id/caption_tv_favorite"
            style="@style/Caption.Header.Small"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/margin_five"
            android:layout_marginRight="@dimen/margin_five"
            android:gravity="end"
            android:minWidth="80dp"
            android:text="@string/favorite"
            android:visibility="gone"/>
    </RelativeLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/products_srl"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_beer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_five"
        android:layout_marginBottom="@dimen/margin_five"
        android:scrollbars="vertical"
        android:visibility="visible" />

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>