<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    card_view:cardBackgroundColor="@color/n_white"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/ll_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_three"
        android:layout_marginLeft="@dimen/margin_three"
        android:layout_marginStart="@dimen/margin_three"
        android:layout_marginTop="@dimen/margin_three"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listitem_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/margin_favorite"
            android:layout_marginRight="@dimen/margin_favorite"
            android:minWidth="100dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/ll_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listitem_tv_name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listitem_tv_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="70dp"
                android:text="" />

            <TextView
                android:id="@+id/listitem_tv_abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/margin_five"
                android:layout_marginStart="@dimen/margin_five"
                android:layout_toEndOf="@+id/listitem_tv_blank"
                android:layout_toRightOf="@+id/listitem_tv_blank"
                android:minWidth="70dp"
                android:text="@string/abv"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/listitem_tv_ibu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/margin_five"
                android:layout_marginStart="@dimen/margin_five"
                android:layout_toEndOf="@+id/listitem_tv_abv"
                android:layout_toRightOf="@+id/listitem_tv_abv"
                android:minWidth="70dp"
                android:text="@string/ibu"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/listitem_tv_ebc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/margin_five"
                android:layout_marginStart="@dimen/margin_five"
                android:layout_toEndOf="@+id/listitem_tv_ibu"
                android:layout_toRightOf="@+id/listitem_tv_ibu"
                android:minWidth="70dp"
                android:text="@string/ebc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey"
                android:textStyle="normal" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/listitem_iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@null"
            android:gravity="end"
            android:padding="3dip"
            android:src="@drawable/favor0" />

    </RelativeLayout>

</android.support.v7.widget.CardView>